# SNIG

./: .gitignore  CMakeLists.txt  README.md
.others/: bf_one_gpu.hpp  time.sh
.others/others/: GPU_decomposition.hpp  GPU_decomposition_multiple.hpp  GPU_taskflow.hpp  GPU_taskflow_multiple_test.hpp  kernel.hpp
.others/snig_others/: snig_with_cpu_taskflow.hpp
Baseline/C++/: ReadCategories.cpp  ReadSparse.cpp  StrFileRead.cpp  StrFileWrite.cpp  inferenceReLUvec.cpp  runSparseDNNchallenge.cpp
Baseline/matlab/: inferenceReLUvec.m  readTriples.m  runSparseDNNchallenge.m  writeTriples.m
SNIG/: SNIG.hpp  SNIG_GPU.hpp
SNIG/base/: base.hpp
SNIG/bf/: bf.hpp  bf_multiple_gpus.hpp  bf_one_gpu.hpp  bf_one_gpu_cudaGraph.hpp  kernel.hpp
SNIG/gpipe/: gpipe.hpp
SNIG/others/: CPU_parallel.hpp  GPU_cusparse.hpp  GPU_taskflow_multiple.hpp  sequential.hpp
SNIG/snig/: kernel.hpp  kernel_wo_forward_feeding.hpp  kernel_wo_resetting.hpp  snig.hpp  snig_capturer.hpp  snig_capturer_update.hpp  snig_cudaGraph.hpp  snig_pipeline.hpp  snig_pipline.hpp  snig_taskflow.hpp  snig_update.hpp  snig_update_wo_forward_feeding.hpp  snig_update_wo_resetting.hpp  snig_with_cpu_taskflow.hpp
SNIG/snig/snig_others/: snig_cudaGraph.hpp
SNIG/utility/: cuda_error.hpp  matrix_format.h  matrix_operation.hpp  reader.hpp  scoring.hpp  task.hpp  thread_pool.hpp  utility.hpp
SNIG/xtensor/: xtensor.hpp
SparseDNN/: SparseDNN.hpp  SparseDNN_GPU.hpp
SparseDNN/baseline/: sequential.hpp
SparseDNN/parallel/: CPU_parallel.hpp  GPU_baseline.hpp  GPU_baseline_multiple.hpp  GPU_cugraph.hpp  GPU_cusparse.hpp  GPU_decomposition.hpp  GPU_decomposition_multiple.hpp  GPU_decomposition_multiple_test.hpp  GPU_parallel.hpp  GPU_taskflow.hpp  GPU_taskflow_add_ident.hpp  GPU_taskflow_multiple.hpp  GPU_taskflow_multiple_test.hpp  data_parallel.hpp  task.hpp
SparseDNN/sequential/: sequential.hpp
SparseDNN/utility/: cuda_error.hpp  file.hpp  matrix_format.h  matrix_operation.hpp  reader.hpp  scoring.hpp  utility.hpp
main/: diagonal_to_binary.cu  main.cpp  main.cu  main_update.cu  tsv_file_to_binary.cu
sample_data/MNIST/: neuron1024-l120-categories.tsv
sample_data/weight/: n1024-l1.tsv  n1024-l102.tsv  n1024-l104.tsv  n1024-l113.tsv  n1024-l120.tsv  n1024-l13.tsv  n1024-l16.tsv  n1024-l30.tsv  n1024-l49.tsv  n1024-l51.tsv  n1024-l56.tsv  n1024-l59.tsv  n1024-l6.tsv  n1024-l65.tsv  n1024-l70.tsv  n1024-l72.tsv  n1024-l76.tsv  n1024-l77.tsv  n1024-l78.tsv  n1024-l8.tsv  n1024-l86.tsv  n1024-l94.tsv  n1024-l96.tsv  n1024-l97.tsv
sample_data/weight/neuron1024/: n1024-l10.tsv  n1024-l100.tsv  n1024-l101.tsv  n1024-l103.tsv  n1024-l105.tsv  n1024-l106.tsv  n1024-l107.tsv  n1024-l108.tsv  n1024-l109.tsv  n1024-l11.tsv  n1024-l110.tsv  n1024-l111.tsv  n1024-l112.tsv  n1024-l114.tsv  n1024-l115.tsv  n1024-l116.tsv  n1024-l117.tsv  n1024-l118.tsv  n1024-l119.tsv  n1024-l12.tsv  n1024-l14.tsv  n1024-l15.tsv  n1024-l17.tsv  n1024-l18.tsv  n1024-l19.tsv  n1024-l2.tsv  n1024-l20.tsv  n1024-l21.tsv  n1024-l22.tsv  n1024-l23.tsv  n1024-l24.tsv  n1024-l25.tsv  n1024-l26.tsv  n1024-l27.tsv  n1024-l28.tsv  n1024-l29.tsv  n1024-l3.tsv  n1024-l31.tsv  n1024-l32.tsv  n1024-l33.tsv  (+56 more)
unittests/: matrix_operation  matrix_operation.cpp  reader  reader.cpp  sequential.cpp  task  task.cu  thread_pool  thread_pool.cpp
